2003-02-11  Naba Kumar <naba@gnome.org>

	* src/style-editor.c: Fixed pango font description handling for fonts.
	* src/anjuta.glade: Removed font size spin button.
	* configure.in, src/anjuta.prj: Corrected version.
	* TODO: update.
	
2003-02-10  Naba Kumar <naba@gnome.org>

	* src/Makefile.am, src/anjuta-tools.c, src/main_menubar.c: Removed
	references of scroll-menu.h and add about.h in Makefile.am.
	
	* widgets/Makefile.am, (removed) widgets/e-shell-about-box.c,
	(removed) widgets/e-shell-about-box.h, (removed) widgets/scroll-menu.c,
	(removed) widgets/scroll-menu.h: Removed unused files.
	
	* Makefile.am: Added proper i18n rules and added intl tools for
	distributions.
	
	* anjuta.prj, configure.in: Changed version to 1.8.0 (reserving 1.2.0
	to the stable release).
	
	* anjuta.spec.in: Removed manuals packaging.
	
	* data/Makefile.am: Removed 'macros' installation (not required for
	gnome2 projects).

2003-02-10  Naba Kumar <naba@gnome.org>

	* po/POTFILES.in: Updated.

	* pixmaps/Makefile.am, pixmaps/anjuta_icon.png, 
	(added) pixmaps/close_project.png, (removed) pixmaps/close_project.xpm,
	(added) pixmaps/open_project.png, (removed) pixmaps/open_project.xpm,
	(added) pixmaps/save_project.png, (removed) pixmaps/save_project.xpm,
	(added) pixmaps/undock.png, (removed) pixmaps/undock.xpm: Better
	icons and images.

	* src/aneditor.cxx, src/pixmaps.h, src/toolbar_callbacks.c,
	src/toolbar_callbacks.h: Fixed scintilla notification signal name
	and fixed to properly handle focus in find entry box.

	* Makefile.am: Added code for RH system menu update.

	* .cvsignore: Updated.

	* NEWS: Updated.

2003-02-03  Naba Kumar <naba@gnome.org>

	* src/anjuta.glade, src/anjuta_dialogs_strings.c: Added edge.column
	editor preferences. and fixes dialogs.

	* printing/print.c, src/text_editor_gui.c, src/main_menu_callbacks.h:
	Fixed linenumbers and header margins when they are disabled and
	removed unused header files.
