@@ -429,6 +429,25 @@ fv_connect ()
 }
 
 static void
+mapping_function (GtkTreeView *treeview, GtkTreePath *path, gpointer data)
+{
+	gchar *str;
+	GList *map = * ((GList **) data);
+	
+	str = gtk_tree_path_to_string (path);
+	map = g_list_append (map, str);
+	* ((GList **) data) = map;
+};
+
+static GList *
+fv_map_tree_view_state (GtkTreeView *treeview)
+{
+	GList *map = NULL;
+	gtk_tree_view_map_expanded_rows (treeview, mapping_function, &map);
+	return map;
+}
+
+static void
 on_file_view_row_expanded (GtkTreeView *view,
 			   GtkTreeIter *iter,
 			   GtkTreePath *path)
@@ -609,6 +628,7 @@ fv_populate (gboolean full)
 {
 	static gboolean busy = FALSE;
 	static const char *ignore[] = {"CVS", NULL};
+	GList *selected_items;
 
 #ifdef DEBUG
 	g_message ("Populating file view..");
@@ -622,6 +642,7 @@ fv_populate (gboolean full)
 		busy = TRUE;
 
 	fv_disconnect ();
+	selected_items = fv_map_tree_view_state (GTK_TREE_VIEW (fv->tree));
 	fv_clear ();
 
 	if (!app || !app->project_dbase || !app->project_dbase->top_proj_dir)
@@ -634,9 +655,29 @@ fv_populate (gboolean full)
 					   NULL, full, NULL, ignore, TRUE);
 	if (!fv->file_tree)
 		goto clean_leave;
-	fv_hide();
+	// fv_hide();
 	fv_add_tree_entry (fv->file_tree, NULL);
-	fv_show();
+
+	/* Restore expanded nodes */	
+	if (selected_items)
+	{
+		GtkTreePath *path;
+		GtkTreeModel *model;
+		GList *node;
+		node = selected_items;
+		
+		model = gtk_tree_view_get_model (GTK_TREE_VIEW (fv->tree));
+		while (node)
+		{
+			path = gtk_tree_path_new_from_string (node->data);
+			gtk_tree_view_expand_row (GTK_TREE_VIEW (fv->tree), path, FALSE);
+			gtk_tree_path_free (path);
+			node = g_list_next (node);
+		}
+		glist_strings_free (selected_items);
+	}
+	
+	//fv_show();
 
 clean_leave:
 	fv_connect ();
